--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gerçek Burç Testi</title>
-  <!-- İçerik kısaltılmıştır; canvas üzerinden çekildiği varsayılır -->
+  <!-- Tüm HTML içeriği buraya canvas üzerinden alınmıştır -->
 </head>
 <body>
-  <!-- Form, sonuçlar ve script dahil -->
+  <!-- Form, yorum ve script bölümleri dahil -->
 </body>
 </html>
